# vitreous-engine

./: .gitignore  CMakeLists.txt  README.md  reset-build.sh
engine/: CMakeLists.txt
engine/except/: error.cpp  error.hpp  runtime-error.cpp  runtime-error.hpp  runtime.cpp  runtime.hpp
engine/platform/: except.hpp  logger.cpp  logger.hpp  standard.hpp  wayland_client.hpp  ws_interface.hpp  xcb_client.hpp
engine/platform/linux/: wayland_client.cpp  wayland_client.hpp  xcb_client.cpp  xcb_client.hpp
engine/renderer/: assert.hpp  except.hpp  gpu_device.cpp  gpu_device.hpp  instance_factory.cpp  instance_factory.hpp  renderer_context.cpp  renderer_context.hpp  renderer_gpu.cpp  renderer_gpu.hpp  service_provider.cpp  service_provider.hpp  surface_presenter.cpp  surface_presenter.hpp  vulkan_api.hpp  window_surface.cpp  window_surface.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt
test/engine_test/: renderer_test.cpp
test/glfw_client/: test_main.cpp
test/vulkan-apps/: test-main.cpp  viking-room.cpp  viking-room.hpp
test/vulkan-demo/: application.cpp  application.hpp  demo-app.cpp  demo-app.hpp  test-main.cpp
test/vulkan_apps/: test_main.cpp  viking_room.cpp  viking_room.hpp  vitreous_model.hpp  vulkan_model.cpp  vulkan_model.hpp
test/vulkan_apps/shaders/: compile.sh
test/wayland/: test-main.cpp  test_main.cpp  wl-client.cpp  wl-client.hpp  wl_client.cpp  wl_client.hpp
test/wl-glfw/: test-main.cpp
test/xcb-client/: test-main.cpp  xcb-window.cpp  xcb-window.hpp
test/xcb-window/: test-main.cpp
test/xcb_client/: test_main.cpp  xcb_window.cpp  xcb_window.hpp
